--- a/src/app/application/details/applicationAPIs.html
+++ b/src/app/application/details/applicationAPIs.html
@@ -40,7 +40,7 @@
 			</tbody>
 		</table>
 	</md-data-table-container>
-	<md-button class="md-mini md-fab" ng-click="applicationCtrl.showSubscribeApiModal($event)">
-		<ng-md-icon icon="add"></ng-md-icon>							
-	</md-button>
 </div>
+<md-button class="md-fab md-fab-bottom-right" aria-label="Add"  ng-click="applicationCtrl.showSubscribeApiModal($event)">
+	<ng-md-icon icon="add"></ng-md-icon>
+</md-button>
