--- a/src/app/api/admin/apiAdmin.html
+++ b/src/app/api/admin/apiAdmin.html
@@ -15,10 +15,10 @@
     limitations under the License.
 
 -->
-<section class="content-header">
+<section>
   <div ng-include="'app/api/apiHeader.html'"></div>
 
-  <md-card>
+  <md-card style="margin: 0;">
     <md-card-content>
       <md-tabs md-dynamic-height md-border-bottom md-selected="selectedTab">
         <md-tab label="general" ui-sref="apis.admin.general"></md-tab>
