--- a/src/app/application/details/applicationGeneral.html
+++ b/src/app/application/details/applicationGeneral.html
@@ -33,7 +33,7 @@
 					<input ng-model="applicationCtrl.application.description" type="text" ng-required="true">
 				</md-input-container>
 				<div class="md-actions gravitee-api-save-button" layout="row">
-					<md-button type="submit" class="md-primary" ng-disabled="formApplication.$invalid || formApplication.$pristine">
+					<md-button type="submit" class="md-raised" ng-disabled="formApplication.$invalid || formApplication.$pristine">
 							Save
 					</md-button>
 				</div>
