--- a/src/app/application/dialog/subscribeApi.dialog.html
+++ b/src/app/application/dialog/subscribeApi.dialog.html
@@ -15,37 +15,61 @@
     limitations under the License.
 
 -->
-  <md-dialog aria-label="Subscribe to APIs">
-    <form name="formSubscribeAPI" ng-submit="subscribe(application)" novalidate>
-      <md-toolbar>
-        <div class="md-toolbar-tools">
-          <h2>Subscribe to APIs</h2>
-          <span flex></span>
-          <md-button class="md-icon-button" ng-click="hide()">
-            <ng-md-icon icon="close"></ng-md-icon>
-          </md-button>
-        </div>
-      </md-toolbar>
-      <md-dialog-content>
-				<div class="md-padding">
-					<label>Filter: <input ng-model="searchAPI"></label>
-					<span ng-repeat="api in apis | filter:searchAPI"">
-						<md-checkbox 
-							value="{{api.id}}" 
-							aria-label="{{api.name}}" 
-							ng-click="selectApi(api)">
-				      {{ api.name }}
-				    </md-checkbox>
-					</span>
-				</div>
-      </md-dialog-content>
-      <div class="md-actions" layout="row">
-        <md-button type="button" ng-click="hide()" class="md-primary">
-          Cancel
-        </md-button>
-        <md-button type="submit" class="md-primary" ng-disabled="formSubscribeAPI.$invalid">
-          Subscribe
-        </md-button>
-      </div>
-    </form>
-  </md-dialog>
+<md-dialog aria-label="Subscribe to APIs" style="width: 60%">
+  <md-toolbar>
+    <div class="md-toolbar-tools">
+      <h2>Subscribe to APIs</h2>
+      <span flex></span>
+      <md-button class="md-icon-button" ng-click="hide()">
+        <ng-md-icon icon="close"></ng-md-icon>
+      </md-button>
+    </div>
+  </md-toolbar>
+  <md-dialog-content>
+		<div class="md-padding">
+			<form id="api-search-form" ng-submit="$event.preventDefault()">
+				<md-autocomplete
+				    md-selected-item="selectedItem"
+				    md-search-text="searchText"
+						md-search-text-change="searchTextChange(searchText)"
+        		md-selected-item-change="selectedItemChange(item)"
+				    md-items="item in apis"
+				    md-item-text="item.name"
+				    md-min-length="0"
+						md-autofocus="false"
+				    placeholder="Search APIs ..."
+						md-menu-class="autocomplete-custom-template">
+      		
+					<md-item-template>
+        		<span>
+							{{item.name}}
+        		</span>
+      		</md-item-template>
+				  <md-not-found>
+				    No apis matching "{{searchText}}" were found.
+				  </md-not-found>
+				</md-autocomplete>
+			</form>
+			<div ng-show="apisFound.length > 0">
+				<span ng-repeat="api in apisFound">
+					<md-checkbox
+						value="{{api.id}}" 
+						aria-label="{{api.id}}" 
+						ng-click="selectAPI(api)">
+				    <span>
+							{{api.name}}
+        		</span>
+				  </md-checkbox>
+				</span>
+			</div>
+		</div>
+  </md-dialog-content>
+  <div class="md-actions" layout="row">
+    <md-button type="button" ng-click="hide()" class="md-primary">
+      Cancel
+    </md-button>
+    <md-button type="submit" ng-click="subscribe(application)" class="md-primary">
+      Subscribe
+    </md-button>
+  </div>
+</md-dialog>
