--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -109,6 +109,27 @@ md-sidenav, .md-open-menu-container {
   text-decoration: underline;
 }
 
+md-toolbar:not(.md-hue-1),
+.md-fab {
+  fill: #fff;
+}
+
+ng-md-icon {
+  position: relative;
+  top: 7px;
+}
+
+.btn-group ng-md-icon {
+	position: relative;
+  top: 3px;
+}
+
+.breadcrumb {
+	margin-bottom: 0px !important;
+	padding: 0px !important;
+  background-color: transparent !important;
+}
+
 /**
  *  Do not remove this comments bellow. It's the markers used by gulp-inject to inject
  *  all your sass files automatically
