feat(properties): Complete API properties management

--- a/src/app/api/apiHeader.html
+++ b/src/app/api/apiHeader.html
@@ -17,14 +17,14 @@
 -->
 <div layout="column" layout-align="end-start" layout-padding class="gravitee-api-header" flex>
 	<div class="gravitee-api-header-content inset">
-	  <h3>{{apiCtrl.api.name}}</h3>
+	  <h3>{{apiCtrl.api.name}} - {{apiCtrl.api.version}}</h3>
 	  <p>
 			<small><div read-more ng-model="apiCtrl.api.description" words="false" length="150"></div></small>
 		</p>
 		<p ng-switch="apiCtrl.api.visibility">
-			<span ng-switch-when="public"><ng-md-icon icon="public"></ng-md-icon> {{apiCtrl.api.visibility}}</span>
-			<span ng-switch-when="private"><ng-md-icon icon="lock"></ng-md-icon> {{apiCtrl.api.visibility}}</span>
-			<span ng-switch-when="restricted"><ng-md-icon icon="vpn_lock"></ng-md-icon> {{apiCtrl.api.visibility}}</span>
+			<span ng-switch-when="public"><ng-md-icon icon="public"></ng-md-icon></span>
+			<span ng-switch-when="private"><ng-md-icon icon="lock"></ng-md-icon></span>
+			<span ng-switch-when="restricted"><ng-md-icon icon="vpn_lock"></ng-md-icon></span>
     </p>
 	 </div>
 </div>
