--- a/src/app/api/api.scss
+++ b/src/app/api/api.scss
@@ -129,13 +129,8 @@ $flowRadius: 120px;
 
 .gravitee-api-header {
 	height: 320px;
-	background: url('../app/images/api-header-background.jpg') center center no-repeat; 
+	background: url('../app/images/api-header-background.png') center center no-repeat; 
 	background-size: cover; 
-}
-
-.gravitee-api-header-go-back {
-	margin-top: 70px;
-	color: white; 
 }
 
 .gravitee-api-header-content {
@@ -143,6 +138,6 @@ $flowRadius: 120px;
 	padding-left: 20px !important;
 }
 
-.gravitee-api-header-content ng-md-icon, .gravitee-api-header-go-back ng-md-icon {
+.gravitee-api-header-content ng-md-icon {
 	fill: white;
 }
