--- a/src/app/api/admin/general/apiGeneral.html
+++ b/src/app/api/admin/general/apiGeneral.html
@@ -47,7 +47,7 @@
   <div layout="" layout-sm="column">
     <md-input-container class="flex">
       <label>Version</label>
-      <input ng-model="apiCtrl.api.version" type="text" ng-required="true" ng-disabled="true">
+      <input ng-model="apiCtrl.api.version" type="text" ng-required="true">
     </md-input-container>
 
     <div layout="column">
