--- a/src/app/api/apisThumbMode.html
+++ b/src/app/api/apisThumbMode.html
@@ -16,7 +16,7 @@
 
 -->
 <div layout="row" layout-wrap class="inset" ng-init="apisCtrl.list()">
-	<div class="apis-box" flex="33" ng-repeat="api in apisCtrl.apis" ng-class="{'gravitee-disabled': api.state === 'stopped'}">
+	<div class="apis-box" flex="33" ng-repeat="api in apisCtrl.apis">
 		<a ui-sref="apis.portal({apiId: api.id})">
 			<md-card class="api-box" style="position: relative;">
 				<div class="api-box-header" ng-style="{'background-color': apisCtrl.bgColorByIndex($index)}" layout="row">
@@ -30,21 +30,27 @@
 				</div>
 				<md-card-content>
 					<div layout="row">
-						<div flex="33" class="border-right">
+						<div flex="25" class="border-right">
 							<div class="description-block">
 								<ng-md-icon icon="{{apisCtrl.getVisibilityIcon(api)}}"></ng-md-icon>
 							</div>
 						</div>
-						<div flex="33" class="border-right">
+						<div flex="25" class="border-right">
 							<div class="description-block">
 								<h5 class="description-header">0</h5>
 								<span class="description-text">APPLICATIONS</span>
 							</div>
 						</div>
-						<div flex="33">
+						<div flex="25" class="border-right">
 							<div class="description-block">
 								<h5 class="description-header">0</h5>
 								<span class="description-text">LIKERS</span>
+							</div>
+						</div>
+						<div flex="25">
+							<div class="description-block">
+								<ng-md-icon ng-if="api.state === 'started'" icon="blur_on" size="32" style="fill: green;" title="Started"></ng-md-icon>
+								<ng-md-icon ng-if="api.state !== 'started'" icon="blur_off" size="32" style="fill: red;" title="Stopped"></ng-md-icon>
 							</div>
 						</div>
 					</div>
