--- a/src/app/components/documentation/page.html
+++ b/src/app/components/documentation/page.html
@@ -15,17 +15,19 @@
     limitations under the License.
 
 -->
-<div ng-if="pageCtrl.markdownType()" btf-markdown="page.content">
-</div>
+<div style="padding-top: 30px;">
+  <div ng-if="pageCtrl.markdownType()" btf-markdown="page.content">
+  </div>
 
-<raml-console ng-if="pageCtrl.ramlType() && page.content && enableTryIt" src="{{pageCtrl.getContentUrl()}}" resources-collapsed
-              disable-title disable-theme-switcher disable-raml-client-generator>
-</raml-console>
+  <raml-console ng-if="pageCtrl.ramlType() && page.content && enableTryIt" src="{{pageCtrl.getContentUrl()}}" resources-collapsed
+                disable-title disable-theme-switcher disable-raml-client-generator>
+  </raml-console>
 
-<raml-console ng-if="pageCtrl.ramlType() && page.content && !enableTryIt" src="{{pageCtrl.getContentUrl()}}" resources-collapsed
-              disable-try-it
-              disable-title disable-theme-switcher disable-raml-client-generator>
-</raml-console>
+  <raml-console ng-if="pageCtrl.ramlType() && page.content && !enableTryIt" src="{{pageCtrl.getContentUrl()}}" resources-collapsed
+                disable-try-it
+                disable-title disable-theme-switcher disable-raml-client-generator>
+  </raml-console>
 
-<div ng-if="pageCtrl.swaggerType()" swagger-ui url="pageCtrl.getContentUrl()" api-explorer="enableTryIt" validator-url="false">
+  <div ng-if="pageCtrl.swaggerType()" swagger-ui url="pageCtrl.getContentUrl()" api-explorer="enableTryIt" validator-url="false">
+  </div>
 </div>
