use a white background

--- a/src/app/api/admin/analytics.html
+++ b/src/app/api/admin/analytics.html
@@ -16,7 +16,7 @@
 
 -->
 <div layout="row">
-  <md-list layout="column" class="inset" flex="20" style="background-color: #f2f4f5; border-right: solid 1px #dadddf; opacity: 0.5;">
+  <md-list layout="column" class="inset" flex="20" style="border-right: solid 1px #dadddf; opacity: 0.5;">
     <h4>REPORTS</h4>
     <md-divider></md-divider>
     <md-item ng-repeat="report in analyticsCtrl.analytics.reports">
@@ -28,7 +28,7 @@
     </md-item>
   </md-list>
 
-  <md-content flex="80" style="background-color: rgb(232, 235, 237);">
+  <md-content flex="80">
     <md-card style="box-shadow:none;">
       <div style="border: 1px solid #e7eaec; border-bottom: 0; padding: 30px 20px 20px;">
         <div layout="row">
