Remove background for analytics

--- a/src/app/api/admin/analytics.html
+++ b/src/app/api/admin/analytics.html
@@ -28,7 +28,7 @@
     </md-item>
   </md-list>
 
-  <md-content flex="80">
+  <md-content flex="80" style="background: none">
     <md-card style="box-shadow:none;">
       <div style="border: 1px solid #e7eaec; border-bottom: 0; padding: 30px 20px 20px;">
         <div layout="row">
