set correct title for application creation

--- a/src/app/application/dialog/application.dialog.html
+++ b/src/app/application/dialog/application.dialog.html
@@ -15,11 +15,11 @@
     limitations under the License.
 
 -->
-<md-dialog aria-label="Creation of a new application">
+<md-dialog aria-label="New application">
   <form name="formApplication" ng-submit="create(application)" novalidate>
     <md-toolbar>
       <div class="md-toolbar-tools">
-        <h2>Creation of a new application</h2>
+        <h2>New application</h2>
         <span flex></span>
         <md-button class="md-icon-button" ng-click="hide()">
           X
