Remove dashboard tab for an application

--- a/src/app/application/applicationsTableMode.html
+++ b/src/app/application/applicationsTableMode.html
@@ -24,8 +24,8 @@
 		</tr>
 		</thead>
 		<tbody>
-		<tr md-auto-select ng-repeat="application in applicationsCtrl.applications | orderBy: order" 
-				title="{{application.description}}" ui-sref="application.dashboard({applicationId: application.id})">
+		<tr md-auto-select ng-repeat="application in applicationsCtrl.applications | orderBy: order"
+				title="{{application.description}}" ui-sref="application.general({applicationId: application.id})">
 			<td>{{application.name}}</td>
 			<td>{{application.type}}</td>
 		</tr>
