--- a/src/app/application/applicationsThumbMode.html
+++ b/src/app/application/applicationsThumbMode.html
@@ -17,7 +17,7 @@
 -->
 <div layout="row" layout-wrap class="inset">
 	<div class="apis-box" flex="33" ng-repeat="application in applicationsCtrl.applications">
-		<a ui-sref="application.dashboard({applicationId: application.id})">
+		<a ui-sref="application.general({applicationId: application.id})">
 			<md-card class="api-box">
 				<div class="api-box-header" ng-style="{'background-color': applicationsCtrl.bgColorByIndex($index)}">
 					<h3>{{application.name}}</h3>
