--- a/src/app/application/details/applicationMembers.html
+++ b/src/app/application/details/applicationMembers.html
@@ -20,7 +20,7 @@
 		<table md-data-table class="md-primary">
 		  <thead md-order="order">
 		    <tr>
-		      <th name="Member name" order-by="user"></th>
+		      <th name="Member" order-by="user"></th>
 					<th name="Role" order-by="type"></th>
 					<th></th>
 		    </tr>
@@ -47,6 +47,7 @@
 		</table>
 	</md-data-table-container>
 </div>
-<md-button class="md-fab md-fab-bottom-right" aria-label="Add"  ng-click="applicationCtrl.showAddMemberModal($event)">
-	<ng-md-icon icon="add"></ng-md-icon>
+
+<md-button class="md-fab md-fab-bottom-right" aria-label="Add" ng-click="applicationCtrl.showAddMemberModal($event)">
+  <ng-md-icon icon="add"></ng-md-icon>
 </md-button>
