Remove dashboard entry in tabs

--- a/src/app/application/details/applicationAPIs.html
+++ b/src/app/application/details/applicationAPIs.html
@@ -33,8 +33,7 @@
 					<td>{{apiKey.revoked}}</td>
 					<td>
 							<md-button class="md-raised" ng-click="applicationCtrl.generateAPIKey(applicationCtrl.application,apiKey.api)">Renew API Key</md-button>
-							<md-button class="md-raised md-warn" ng-click="applicationCtrl.unsubscribeAPI(applicationCtrl.application,apiKey.api, apiKey.key)">Unsubscribe
-							</md-button>
+							<md-button class="md-raised md-warn" ng-click="applicationCtrl.unsubscribeAPI(applicationCtrl.application,apiKey.api, apiKey.key)">Unsubscribe</md-button>
 					</td>
 				</tr>
 			</tbody>
