--- a/src/app/application/details/applicationAPIs.html
+++ b/src/app/application/details/applicationAPIs.html
@@ -16,25 +16,36 @@
 
 -->
 <div layout-padding>
-	<md-data-table-container class="application-data-table" ng-show="applicationCtrl.apiKeys.length > 0">
+	<md-data-table-container class="application-data-table" ng-show="applicationCtrl.hasKeysDefined()">
 		<table md-data-table class="md-primary">
 			<thead>
 				<tr>
-					<th>API</th>
 					<th>API Key</th>
-					<th>API Key's revocation ?</th>
-					<th></th>
+          <th>Revocation Date</th>
+          <th>Expiration Date</th>
+					<th>
+            <md-checkbox md-no-ink aria-label="Show all API keys" ng-model="applicationCtrl.showRevokedKeys" class="md-primary">
+              Show revoked API Keys
+            </md-checkbox>
+          </th>
 				</tr>
 			</thead>
-			<tbody>
-				<tr ng-repeat="apiKey in applicationCtrl.apiKeys">
-					<td>{{apiKey.api}}</td>
-					<td><code>{{apiKey.key}}</code></td>
-					<td>{{apiKey.revoked}}</td>
-					<td>
-							<md-button class="md-raised" ng-click="applicationCtrl.generateAPIKey(applicationCtrl.application,apiKey.api)">Renew API Key</md-button>
-							<md-button class="md-raised md-warn" ng-click="applicationCtrl.unsubscribeAPI(applicationCtrl.application,apiKey.api, apiKey.key)">Unsubscribe</md-button>
-					</td>
+			<tbody ng-repeat="(api, value) in applicationCtrl.apiKeys">
+        <tr style="background-color: #9fb9be">
+          <td colspan="3" style="font-weight: bold">{{value.name}} ({{value.version}})</td>
+          <td>
+            <md-button class="md-raised" ng-click="applicationCtrl.generateAPIKey(applicationCtrl.application, api)">Renew API Key</md-button>
+          </td>
+        </tr>
+				<tr ng-repeat="apikey in value.keys | filter: applicationCtrl.showRevokedKeys">
+          <td>
+            <ng-md-icon ng-show="!apikey.revoked" icon="done" style="fill: #107F20"></ng-md-icon>
+            <ng-md-icon ng-show="apikey.revoked" icon="clear" style="fill: #BE2628"></ng-md-icon>
+            <code>{{apikey.key}}</code>
+          </td>
+          <td>{{apikey.revoked_at | date:'yyyy-MM-dd HH:mm:ss Z'}}</td>
+          <td>{{apikey.expire_on | date:'yyyy-MM-dd HH:mm:ss Z'}}</td>
+          <td></td>
 				</tr>
 			</tbody>
 		</table>
