--- a/src/app/api/admin/apiAdmin.html
+++ b/src/app/api/admin/apiAdmin.html
@@ -22,6 +22,7 @@
     <md-tab label="general" ui-sref="apis.admin.general"></md-tab>
 		<md-tab label="policies" ui-sref="apis.admin.policies"></md-tab>
     <md-tab label="documentation" ui-sref="apis.admin.documentation"></md-tab>
+    <md-tab label="api keys" ui-sref="apis.admin.apikeys"></md-tab>
     <md-tab label="members" ui-sref="apis.admin.members"></md-tab>
     <md-tab label="properties" ui-sref="apis.admin.properties"></md-tab>
     <md-tab label="analytics" ui-sref="apis.admin.analytics"></md-tab>
